projects/vb6parse/snapshots/tests/invalid_syntax/invalid_declarations/dim_missing_identifier_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/invalid_declarations.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
[]
