projects/vb6parse/snapshots/tests/invalid_syntax/invalid_declarations/duplicate_public_modifier_cst.snap
---
source: projects/vb6parse/tests/invalid_syntax/invalid_declarations.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DimStatement
      children:
        - kind: PublicKeyword
          text: Public
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Public
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: LeftParenthesis
          text: (
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "    "
    - kind: CallStatement
      children:
        - kind: Identifier
          text: Debug
        - kind: PeriodOperator
          text: "."
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Duplicate modifier\""
        - kind: Newline
          text: "\n"
    - kind: EndKeyword
      text: End
    - kind: Whitespace
      text: " "
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children: []
